# job-application-tracker

./: .env.example  .gitignore  README.md  constants.py  dashboard.py  jobspy_scraper.py  pyproject.toml
config/: candidate_skills.txt.example  interview_stages.json  presets.json  presets.json.example  prompts.json  prompts.json.example  queries.json  resume.txt.example  searches.txt.example
modules/: __init__.py  database.py  interview_stages_loader.py  langgraph_pipeline.py  latex_builder.py  llm_config.py  prompt_testing.py  prompts_loader.py  resume_editing.py  resume_redaction.py  resume_tailoring.py  resume_templates.py
tabs/: add_job_panel.py  ai_tools_tab.py  analytics_tab.py  job_browser_tab.py  job_edit_panel.py  resume_tailoring_tab.py  scraping_tab.py  user_files_tab.py
